[gd_scene load_steps=6 format=3 uid="uid://b56pfrbvd7r3d"]

[ext_resource type="Script" path="res://dialogue.gd" id="1_nq3vc"]
[ext_resource type="Texture2D" uid="uid://dl3dhoqs5yfv3" path="res://img/ok.png" id="3_gelhn"]
[ext_resource type="Texture2D" uid="uid://cq31pdmkbm52d" path="res://img/not_ok.png" id="4_2fred"]
[ext_resource type="FontFile" uid="uid://gkvaq4f1gqbc" path="res://fonts/MochiyPopOne-Regular.ttf" id="5_21nnh"]
[ext_resource type="Texture2D" uid="uid://4yfvhnuhqel7" path="res://img/bg-dialogue.png" id="5_o3mks"]

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource("1_nq3vc")

[node name="TouchYesButton" type="TouchScreenButton" parent="."]
process_priority = 500
z_index = 4096
position = Vector2(1158, 597)
texture_normal = ExtResource("3_gelhn")

[node name="TouchNoButton" type="TouchScreenButton" parent="."]
z_index = 4096
position = Vector2(8, 614)
texture_normal = ExtResource("4_2fred")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 4090
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("5_o3mks")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 100.0
offset_top = 2.0
offset_right = 1152.0
offset_bottom = 721.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Image" type="TextureRect" parent="VBoxContainer"]
z_index = 4096
layout_mode = 2
stretch_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer"]
z_index = 4096
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("5_21nnh")
theme_override_font_sizes/font_size = 38
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 131

[node name="VScrollBar" type="VScrollBar" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="TouchYesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="TouchNoButton" to="." method="_on_no_button_pressed"]
